# mini_rt

./: .clang-format  .gitignore  BENCHMARK.md  CLAUDE.md  CMakeLists.txt  Makefile  README.md  backlog.md  cylinder.rt  exemple.rt  light.rt  square.rt  valgrind.supp
.github/workflows/: ci.yml
docs/: SDL2_MIGRATION.md
gallery/: cornell_box.rt  glass_spheres.rt  mixed_shapes.rt  reflections.rt  solar_system.rt  spiral.rt
includes/: keybinds.h  mini_rt.h
libft/: CMakeLists.txt
mlx_linux/test/: Makefile.mk
scenes/: benchmark.rt  cathedral_ruins.rt  cathedral_ruins_gen.rt  cylinder.rt  dof_test.rt  error.rt  exemple.rt  inside_cy.rt  inside_cy_l.rt  inside_sp_l.rt  materials.rt  motion_blur.rt  new_shapes.rt  objects.rt  pathtrace.rt  pbr_showcase.rt  quadrics.rt  square.rt  taurus.rt  tiny.rt  triangle.rt
scripts/: bmp2png.py  render_cathedral.sh  run_valgrind.sh
skills/: camera-and-rendering.md  scene-design.md
src/: ft_argb.c  ft_box.c  ft_bump.c  ft_bvh.c  ft_bvh_2.c  ft_bzero_struct.c  ft_cam.c  ft_cam_move.c  ft_check_parsing.c  ft_check_parsing_2.c  ft_close.c  ft_cone.c  ft_csg.c  ft_cylinder.c  ft_cylinder_2.c  ft_disk.c  ft_dof.c  ft_ellipsoid.c  ft_env.c  ft_error.c  ft_event.c  ft_hud.c  ft_light.c  ft_material.c  ft_matrix.c  ft_mesh.c  ft_mini_rt.c  ft_motion.c  ft_paraboloid.c  ft_parsing.c  ft_parsing_2.c  ft_pathtrace.c  ft_pbr.c  ft_plane.c  ft_precompute.c  ft_pt.c  ft_quadric.c  ft_random.c  ft_ray.c  ft_ray_2.c  (+10 more)
tests/: minirt_test.h  test_all.c  test_benchmark.c  test_camera.c  test_intersections.c  test_lighting.c  test_math.c  test_parsing.c  test_pbr.c  test_stubs.c
tests/regression/: cornell_box.rt  inside_sp.rt  lights.rt  new_shapes.rt  objects.rt  reflections.rt  run_regression.sh  scene_basic.rt  scene_new_shapes.rt  spiral.rt  triangle.rt
tools/: bmp_to_png.py  gen_scene.c
